--- a/src/app/auth/pages/forgot-pass/forgot-pass.component.html
+++ b/src/app/auth/pages/forgot-pass/forgot-pass.component.html
@@ -1,7 +1,7 @@
 <form class="login100-form" autocomplete="off">
                 
     <span class="login100-form-title p-b-49">
-        Login
+        Generar nueva contraseña
     </span>
 
     <div class="wrap-input100 m-b-23">
@@ -9,7 +9,7 @@
         <input class="input100"
                type="email" 
                name="username" 
-               placeholder="Ingrese su email">
+               placeholder="Ingrese su username">
         <span class="focus-input100"></span>
     </div>
 
@@ -28,18 +28,17 @@
         <div class="wrap-login100-form-btn">
             <div class="login100-form-bgbtn"></div>
             <button class="login100-form-btn">
-                Login
+                Enviar
             </button>
         </div>
     </div>
 
     <div class="flex-col-c p-t-60">
         <span class="txt1 p-b-17">
-            ¿Olvido su contraseña?
+            ¿Tienes una cuenta?
         </span>
-
-        <a routerLink="/auth/recuperar-pass"class="txt2">
-            Recuperela aqui
+        <a routerLink="/auth"class="txt2">
+            volver a login
         </a>
     </div>
 </form>
