--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -1,4 +1,5 @@
-<form class="login100-form" autocomplete="off">
+<form [formGroup]="miFormulario" class="login100-form" autocomplete="off"
+       (ngSubmit)="login()">
                 
     <span class="login100-form-title p-b-49">
         Login
@@ -7,8 +8,8 @@
     <div class="wrap-input100 m-b-23">
         <span class="label-input100">Username</span>
         <input class="input100"
-               type="email" 
-               name="username" 
+               type="text" 
+               formControlName="usuario"
                placeholder="Ingrese su email">
         <span class="focus-input100"></span>
     </div>
@@ -17,7 +18,7 @@
         <span class="label-input100">Password</span>
         <input class="input100"
                type="password"
-               name="password" 
+               formControlName="clave" 
                placeholder="Ingrese su contraseña">
         <span class="focus-input100"></span>
     </div>
@@ -27,7 +28,8 @@
     <div class="container-login100-form-btn">
         <div class="wrap-login100-form-btn">
             <div class="login100-form-bgbtn"></div>
-            <button class="login100-form-btn">
+            <button class="login100-form-btn"
+                    [disabled]="miFormulario.invalid">
                 Login
             </button>
         </div>
