peticion de identificar usuario exitosa

--- a/src/app/protected/dashboard/dashboard.component.html
+++ b/src/app/protected/dashboard/dashboard.component.html
@@ -1,1 +1,12 @@
 <p>dashboard works!</p>
+<hr>
+
+<p>
+    pagina de autorizados
+</p>
+
+<h4>User info</h4>
+
+<pre> ... </pre>
+
+<button (click)="logout()" >Logout</button>
