--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -29,6 +29,7 @@
         <div class="wrap-login100-form-btn">
             <div class="login100-form-bgbtn"></div>
             <button class="login100-form-btn"
+                    routerLink="/dashboard"
                     [disabled]="miFormulario.invalid">
                 Login
             </button>
