carga del sweet alert en login

--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -29,7 +29,7 @@
         <div class="wrap-login100-form-btn">
             <div class="login100-form-bgbtn"></div>
             <button class="login100-form-btn"
-                    routerLink="/dashboard"
+                    type="submit"
                     [disabled]="miFormulario.invalid">
                 Login
             </button>
@@ -41,7 +41,7 @@
             ¿Olvido su contraseña?
         </span>
 
-        <a routerLink="/auth/recuperar-pass"class="txt2">
+        <a class="txt2">
             Recuperela aqui
         </a>
     </div>
