--- a/src/app/auth/pages/forgot-pass/forgot-pass.component.html
+++ b/src/app/auth/pages/forgot-pass/forgot-pass.component.html
@@ -19,6 +19,7 @@
         <div class="wrap-login100-form-btn">
             <div class="login100-form-bgbtn"></div>
             <button class="login100-form-btn"
+                    type="submit"
                     [disabled]="miFormulario.invalid">
                 Enviar
             </button>
