mejores al manejo de errores, implementacion del settime

--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -41,7 +41,7 @@
             ¿Olvido su contraseña?
         </span>
 
-        <a class="txt2">
+        <a routerLink="/auth/recuperar-pass" class="txt2">
             Recuperela aqui
         </a>
     </div>
