diseño basico del menu con logout funcional

--- a/src/app/protected/dashboard/dashboard.component.html
+++ b/src/app/protected/dashboard/dashboard.component.html
@@ -1,4 +1,7 @@
-<p>dashboard works!</p>
+<div class="p-mt-4" >
+<app-menu></app-menu>
+
+<!--     <p>dashboard works!</p>
 <hr>
 
 <p>
@@ -8,5 +11,9 @@
 <h4>User info</h4>
 
 <pre> {{usuario | json}} </pre>
+ -->
+<!-- <button (click)="logout()" >Logout</button>
+ -->
+    <router-outlet></router-outlet>
+</div>
 
-<button (click)="logout()" >Logout</button>
