--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,9 @@ html,body{
     background-color: var(--surface-b);
     font-family: var(--font-family);
     height: 100%;
+    margin-top: 5px;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .text-layout{
