parte del crud funcionando en fase de ensayo

--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -1,5 +1,7 @@
-<form [formGroup]="miFormulario" class="login100-form" autocomplete="off"
-       (ngSubmit)="login()">
+<form [formGroup]="miFormulario" 
+      class="login100-form" 
+      autocomplete="off"
+      (ngSubmit)="login()">
                 
     <span class="login100-form-title p-b-49">
         Login
