--- a/src/app/protected/dashboard/dashboard.component.html
+++ b/src/app/protected/dashboard/dashboard.component.html
@@ -1,15 +1,76 @@
-<p-menubar [model]="items">
-    <button pButton label="Users"
-            class="p-button-sm"
-            icon="pi pi-user"
-            style="margin-right: 5px;"
-            routerLink="/usuarios/user-read">
-    </button>
-    <button pButton label="Logout"
-            class="p-button-sm"
-            icon="pi pi-power-off"
-            (click)="logout()">
-    </button>
+<p-menubar [model]="items" st >
+
+        <button pButton label="Faculty"
+                class="p-button-sm mt-2"
+                icon="pi pi-user"
+                style="margin-right: 5px;"
+                >
+        </button>
+        <button pButton label="Department"
+                class="p-button-sm mt-2"
+                icon="pi pi-user"
+                style="margin-right: 5px;"
+                >
+        </button>
+        <button pButton label="T-Bonding"
+                class="p-button-sm mt-2"
+                icon="pi pi-user"
+                style="margin-right: 5px;"
+                >
+        </button>
+        <button pButton label="T-Request"
+                class="p-button-sm mt-2"
+                icon="pi pi-user"
+                style="margin-right: 5px;"
+                >
+        </button>
+        <button pButton label="T-Committee"
+                class="p-button-sm mt-2"
+                icon="pi pi-user"
+                style="margin-right: 5px;"
+                >
+        </button>
+        <button pButton label="I-Area"
+                class="p-button-sm mt-2"
+                icon="pi pi-user"
+                style="margin-right: 5px;"
+                >
+        </button>
+        <button pButton label="Modality"
+                class="p-button-sm mt-2"
+                icon="pi pi-user"
+                style="margin-right: 5px;"
+                >
+        </button>
+        <button pButton label="Request"
+                class="p-button-sm mt-2"
+                icon="pi pi-user"
+                style="margin-right: 5px;"
+                >
+        </button>
+        <button pButton label="Proponent"
+                class="p-button-sm mt-2"
+                icon="pi pi-user"
+                style="margin-right: 5px;"
+                >
+        </button>
+        <button pButton label="Juries"
+                class="p-button-sm mt-2"
+                icon="pi pi-user"
+                style="margin-right: 5px;"
+                >
+        </button>
+        <button pButton label="Users"
+                class="p-button-sm mt-2"
+                icon="pi pi-user"
+                style="margin-right: 5px;"
+                routerLink="/usuarios/user-read">
+        </button>
+        <button pButton label="Logout"
+                class="p-button-sm mt-2"
+                icon="pi pi-power-off"
+                (click)="logout()">
+        </button>
 </p-menubar>
 <router-outlet></router-outlet>
    
