usuario x roles boton

--- a/src/app/usuarios-admin/pages/user-update/user-update.component.html
+++ b/src/app/usuarios-admin/pages/user-update/user-update.component.html
@@ -38,6 +38,12 @@ class="text-layout mt-2">
                 pInputText
                 formControlName="estado"> 
     </div>
+    <div class="p-field col-12 md:col-6">
+        <label>Rol</label>
+        <input type="text" 
+                pInputText
+                formControlName="rol"> 
+    </div>
     <!-- <div class="p-field col-12 md:col-6">
         <label for="rol">Rol</label>
         <p-dropdown inputId="rol" 
