--- a/src/app/usuarios-admin/pages/user-read/user-read.component.html
+++ b/src/app/usuarios-admin/pages/user-read/user-read.component.html
@@ -18,6 +18,8 @@
                     <th>Apellido</th>
                     <th>Correo</th>
                     <th>Estado</th>
+                    <th>Rol</th>
+                    <th>Acciones</th>
                 </tr>
             </ng-template>
             <ng-template pTemplate="body" let-user>
@@ -26,6 +28,28 @@
                     <td>{{user.apellido}}</td>
                     <td>{{user.correo}}</td>
                     <td>{{user.estado}}</td>
+                    <table> 
+                        <div *ngIf="user.tiene_muchos; else vacio">
+                            <tr *ngFor="let item of user.tiene_muchos">
+                                <div>
+                                    <td >
+                                        {{item.pertenece_a.nombre }}
+                                    </td>
+                                </div>
+                            </tr>
+                        </div>
+                        <ng-template #vacio>
+                            <button pButton type="button" 
+                                    class="p-button-raised p-button-rounded"
+                                    label="Add Rol"
+                                    icon="pi pi-plus"
+                                    type="button"
+                                    [routerLink]="['/usuarios/rol', user.id]">
+                            </button>
+                        </ng-template>
+                    </table>
+                    
+
                     <td>
                         <button pButton pRipple icon="pi pi-pencil" 
                                 class="p-button-rounded p-button-success p-mr-2"
@@ -43,6 +67,7 @@
                     </td>
                     
                 </tr>
+                
             </ng-template>
         </p-table>
 
