--- a/src/app/usuarios-admin/pages/rol/rol.component.html
+++ b/src/app/usuarios-admin/pages/rol/rol.component.html
@@ -1,4 +1,4 @@
-<p>rol works!</p>
+
 
 <form [formGroup]="miFormulario"
       >
@@ -14,17 +14,19 @@
         </div>
     </div>
     <button pButton type="button" 
-                                    class="p-button-raised p-button-rounded"
+                                    class="p-button-raised p-button-rounded mr-2"
                                     label="Add Rol"
                                     icon="pi pi-plus"
                                     (click)="asignar()"
                                     >
                             </button>
+    <button pButton type="button" 
+                            class="p-button-raised p-button-rounded mr-2 p-button-danger"
+                            label="Cancel"
+                            icon="pi pi-times"
+                            type="button"
+                            routerLink="/usuarios/user-read"
+                            >
+                    </button>
 </form>
 
-
-<ul>
-    <li>
-        {{rol | json}}
-    </li>
-</ul>
