lazy load de area de proponentes funcionando

--- a/src/app/protected/dashboard/dashboard.component.html
+++ b/src/app/protected/dashboard/dashboard.component.html
@@ -56,6 +56,7 @@
                 class="p-button-sm mt-2"
                 icon="pi pi-user"
                 style="margin-right: 5px;"
+                routerLink="/parameters/proponents"
                 >
         </button>
         <button pButton label="Juries"
