--- a/src/app/protected/dashboard/dashboard.component.html
+++ b/src/app/protected/dashboard/dashboard.component.html
@@ -18,6 +18,7 @@
                 class="p-button-sm mt-2"
                 icon="pi pi-user"
                 style="margin-right: 5px;"
+                routerLink="/parameters/bonding"
                 >
         </button>
         <button pButton label="T-Request"
