--- a/src/app/protected/dashboard/dashboard.component.html
+++ b/src/app/protected/dashboard/dashboard.component.html
@@ -25,6 +25,7 @@
                 class="p-button-sm mt-2"
                 icon="pi pi-user"
                 style="margin-right: 5px;"
+                routerLink="/parameters/types-requests"
                 >
         </button>
         <button pButton label="T-Committee"
