personalizaciones con spinner

--- a/src/app/parameters/proponent/pages/proponent-read/proponent-read.component.html
+++ b/src/app/parameters/proponent/pages/proponent-read/proponent-read.component.html
@@ -1,6 +1,28 @@
 <div class="grid" >
+    <div class="col-12" >
+        <div *ngIf="loading" >
+              <div class="d-flex justify-content-center">
+                <div class="spinner-grow text-danger" role="status">
+                    <span class="sr-only"></span>
+                  </div>
+                  <div class="spinner-grow text-warning" role="status">
+                    <span class="sr-only"></span>
+                  </div>
+                  <div class="spinner-grow text-info" role="status">
+                    <span class="sr-only"></span>
+                  </div>
+                <div class="text-primary" role="status">
+                  <span class="sr-only">Loading...</span>
+                </div>
+              </div>
+              
+        </div>
+        
+    </div>
+</div>
+<div class="grid" *ngIf="proponent" >
     <div class="col mt-2" >
-        <p-card >
+        <p-card header="List of Proponents">
 
             <p-toolbar styleClass="p-mb-4">
                 <ng-template pTemplate="left">
@@ -37,7 +59,7 @@
                                         label="Attach" 
                                         class="p-button-outlined"
                                         icon="pi pi-plus"
-                                        routerLink="/parameters/requests/request-read"
+                                        [routerLink]="['/parameters/requests/request-create', proponent.id]"
                                         >
                                 </button>
                             </td>
