--- a/src/app/usuarios-admin/pages/user-create/user-create.component.html
+++ b/src/app/usuarios-admin/pages/user-create/user-create.component.html
@@ -1,9 +1,33 @@
+<div class="grid" >
+    <div class="col-12" >
+        <div *ngIf="bandera" >
+              <div class="d-flex justify-content-center">
+                <div class="spinner-grow text-danger" role="status">
+                    <span class="sr-only"></span>
+                  </div>
+                  <div class="spinner-grow text-warning" role="status">
+                    <span class="sr-only"></span>
+                  </div>
+                  <div class="spinner-grow text-info" role="status">
+                    <span class="sr-only"></span>
+                  </div>
+                <div class="text-primary" role="status">
+                  <span class="sr-only">Loading...</span>
+                </div>
+              </div>
+              
+        </div>
+        
+    </div>
+</div>
 
-
-<form [formGroup]="miFormulario" 
-      class="login100-form" 
-      autocomplete="off"
-      class="text-layout mt-2">
+<div class="grid" >
+    <div class="col mt-2" >
+        <p-card header="Create New User" >
+            <form [formGroup]="miFormulario" 
+                  class="login100-form" 
+                  autocomplete="off"
+                  class="text-layout">
       
       <div class="p-fluid p-formgrid grid text-layout">
         <div class="p-field col-12 md:col-6">
@@ -38,13 +62,25 @@
                         optionLabel="name">
             </p-dropdown>
         </div> -->
-        <div class="p-field col-12 ">
+        <div class="p-field col-6 ">
 
             <button pButton type="button"
                     icon="pi pi-check "
                     label="Create" 
                     class="p-button-outlined p-button-success"
                     (click)="createUser()"
+                    type="button"
+                    [disabled]="miFormulario.invalid">
+            </button>
+
+        </div>
+        <div class="p-field col-6 ">
+
+            <button pButton type="button"
+                    icon="pi pi-times "
+                    label="Cancel" 
+                    class="p-button-outlined p-button-danger"
+                    routerLink="/usuarios/user-read"
                     type="button">
             </button>
 
@@ -52,4 +88,8 @@
 
     </div>
 </form>
+
+        </p-card>
+    </div>
+</div>
 
