--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,9 @@ html,body{
     margin-left: 5px;
     margin-right: 5px;
 }
-
+.status-layout{
+  color: var(green-500);
+}
 .text-layout{
     color: var(--text-color);
 }
