--- a/src/app/parameters/faculty/pages/faculty-create/faculty-create.component.html
+++ b/src/app/parameters/faculty/pages/faculty-create/faculty-create.component.html
@@ -1,1 +1,61 @@
-<p>faculty-create works!</p>
+<div class="grid" >
+    <div class="col mt-2" >
+        <p-card header="Create New Faculty" >
+
+            <form [formGroup]="miFormulario" 
+            class="text-layout mt-2">
+            
+            <div class="p-fluid p-formgrid grid text-layout">
+              <div class="p-field col-12 md:col-6">
+                  <label> Name </label>
+                  <input type="text" 
+                         pInputText
+                         formControlName="nombre"> 
+              </div>
+            </div>
+            <div class="p-fluid p-formgrid grid text-layout">
+                <div class="p-field col-12 md:col-12">
+                    <div class="grid mt-2 " >
+
+                        <div class="p-field col-12 md:col-6 ">
+            
+                            <button pButton type="button"
+                                    icon="pi pi-check "
+                                    label="Create" 
+                                    class="p-button-outlined p-button-success"
+                                    (click)="createFaculty()"
+                                    [disabled]="miFormulario.invalid"
+                                    type="button">
+                            </button>
+                        </div>
+                        <div class="p-field col-12 md:col-6 ">
+                        
+                            <button pButton type="button"
+                                    icon="pi pi-times "
+                                    label="Cancel" 
+                                    class="p-button-outlined p-button-danger"
+                                    routerLink="/parameters/faculties/faculty-read"
+                                    type="button">
+                            </button>
+                        
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </form>
+        </p-card>
+    </div>
+</div> 
+
+
+
+
+<!-- <p-card>
+    <ng-template pTemplate="header">
+        Header content here
+    </ng-template>
+    Body Content
+    <ng-template pTemplate="footer">
+        Footer content here
+    </ng-template>
+</p-card> -->
