--- a/src/app/protected/dashboard/dashboard.component.html
+++ b/src/app/protected/dashboard/dashboard.component.html
@@ -53,6 +53,13 @@
                         routerLink="/parameters/modalities"
                         >
                 </button>
+                <button pButton label="Status"
+                        class="p-button-sm mt-2"
+                        icon="pi pi-user"
+                        style="margin-right: 5px;"
+                        routerLink="/parameters/status"
+                        >
+                </button>
                 <button pButton label="Request"
                         class="p-button-sm mt-2"
                         icon="pi pi-user"
