--- a/src/app/usuarios-admin/pages/change-password/change-password.component.html
+++ b/src/app/usuarios-admin/pages/change-password/change-password.component.html
@@ -1,1 +1,53 @@
-<p>change-password works!</p>
+<div class="grid" >
+    <div class="col mt-2" >
+        <p-card header="Change Password" >
+
+            <form [formGroup]="miFormulario" 
+            class="text-layout mt-2">
+            
+            <div class="p-fluid p-formgrid grid text-layout">
+              <div class="p-field col-12 md:col-6">
+                  <label> Old Pass </label>
+                  <input type="password" 
+                         pInputText
+                         formControlName="oldpass"> 
+              </div>
+              <div class="p-field col-12 md:col-6">
+                  <label> New Pass </label>
+                  <input type="password" 
+                         pInputText
+                         formControlName="newpass"> 
+              </div>
+            </div>
+            <div class="p-fluid p-formgrid grid text-layout">
+                <div class="p-field col-12 md:col-12">
+                    <div class="grid mt-2 " >
+
+                        <div class="p-field col-12 md:col-6 ">
+            
+                            <button pButton type="button"
+                                    icon="pi pi-check "
+                                    label="Accept" 
+                                    class="p-button-outlined p-button-success"
+                                    (click)="changePass()"
+                                    type="button">
+                            </button>
+                        </div>
+                        <div class="p-field col-12 md:col-6 ">
+                        
+                            <button pButton type="button"
+                                    icon="pi pi-times "
+                                    label="Cancel" 
+                                    class="p-button-outlined p-button-danger"
+                                    routerLink="/usuarios/user-read"
+                                    type="button">
+                            </button>
+                        
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </form>
+        </p-card>
+    </div>
+</div> 
