--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -2,6 +2,15 @@
       class="login100-form" 
       autocomplete="off"
       (ngSubmit)="login()">
+      <div class="p-field col-12 md:col-4">
+        <label class="form-label">Rol</label>
+        <select class="form-control"
+                formControlName="rol">
+            <option value=""> --Choose Rol-- </option>
+            <option *ngFor="let tipo of rol"
+                    [value]="tipo"> {{tipo}} </option>
+        </select>
+    </div>
                 
     <span class="login100-form-title p-b-49">
         Login
