guardian de admin funcional

--- a/src/app/protected/dashboard/dashboard.component.html
+++ b/src/app/protected/dashboard/dashboard.component.html
@@ -110,10 +110,10 @@
         </p-menubar>
 </div>
 <router-outlet></router-outlet>
-<!-- <div class="text-layout" >
+<div class="text-layout" >
         <pre> {{ usuario | json }} </pre>
 
-</div> -->
+</div>
    
 
 
