--- a/src/app/parameters/request/pages/request-create/request-create.component.html
+++ b/src/app/parameters/request/pages/request-create/request-create.component.html
@@ -1,11 +1,18 @@
 <div class="grid" >
     <div class="col mt-2" >
         <p-card header="Create New request" >
+            <form [formGroup]="mainForm" >
+                <div class="row">
+                    
+                </div>
+
+            </form>
 
             <form [formGroup]="miFormulario" 
             class="text-layout mt-2">
             
             <div class="p-fluid p-formgrid grid text-layout">
+               
               <div class="p-field col-12 md:col-6">
                   <label> Name </label>
                   <input type="text" 
